force-app/main/default/objects/Customer_Order_Inventory__c/Customer_Order_Inventory__c.object-meta.xml
<CustomObject>
    <label>Customer Order Inventory</label>
    <nameField>
        <displayFormat>COI-{00000000}</displayFormat>
        <label>Customer Order Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>