force-app/main/default/objects/Customer_Order_Inventory__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Order Inventory</relationshipLabel>
    <relationshipName>Customer_Order_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>