force-app/main/default/objects/Customer_Order_Inventory__c/fields/Daily_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Quantity__c</fullName>
    <label>Daily Sales Quantity</label>
    <summarizedField>Customer_Order_Inventory_Daily__c.Quantity__c</summarizedField>
    <summaryForeignKey>Customer_Order_Inventory_Daily__c.Customer_Order_Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>