force-app/main/default/objects/Customer_Order_Inventory__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <description>客户编码-产品线-产品</description>
    <externalId>true</externalId>
    <label>key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>