force-app/main/default/objects/Customer_Order_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Customer__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>SAP_Customer_Code__c</columns>
    <columns>Daily_Sales_Quantity__c</columns>
    <columns>Distributor_Inventory_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Sync__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>